<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium" >

    <TextView
        android:id="@+id/appDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/app_version" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_developer_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/app_desc"
        android:textColor="@color/default_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/app_disclaimer" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/app_tip" />

</LinearLayout>