<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:clickable="false"
	android:focusable="false"
	android:focusableInTouchMode="false"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  
  	<TextView android:id="@+id/passenger_info_line1"
  		android:text="@string/line1"
  		android:layout_alignParentTop="true"
  		android:layout_margin="1dp"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
  	</TextView>
  	
  	<TextView android:id="@+id/passenger_info_line2"
  		android:text="@string/line2"
  		android:layout_below="@+id/passenger_info_line1"
  		android:layout_margin="1dp"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
  	</TextView>
  	
  	<TextView android:id="@+id/passenger_info_line3"
  		android:text="@string/line3"
  		android:layout_below="@+id/passenger_info_line2"
  		android:layout_margin="1dp"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
  	</TextView>
  	
  	<TextView android:id="@+id/passenger_info_line4"
  		android:text="@string/line4"
  		android:layout_below="@+id/passenger_info_line3"
  		android:layout_margin="1dp"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
  	</TextView>
  
</RelativeLayout>