<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TicketInfoLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium" >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_train_black_24dp"/>

    <TextView
        android:id="@+id/ticket_info_line1"
        android:text="@string/ticket_info_line_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticket_info_line2"
        android:text="@string/ticket_info_line_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticket_info_line3"
        android:text="@string/ticket_info_line_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticket_info_line4"
        android:text="@string/ticket_info_line_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ticket_info_line5"
        android:text="@string/ticket_info_line_5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_person_black_24dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/empty_text" />
    </RelativeLayout>

</LinearLayout>