<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="@dimen/margin_medium"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dip">

        <!-- PNR Number Text on the left, with status below it -->

        <TextView
            android:id="@+id/pnr_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text=""
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pnr_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pnr_number"
            android:textColor="@color/white"
            android:gravity="start"
            android:text=""/>

        <TextView
            android:id="@+id/extra_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pnr_status"
            android:gravity="start"
            android:text=""/>

        <!-- The buttons are aligned right -->

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/more_info"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/pnr_check_button"
            app:srcCompat="@drawable/ic_refresh"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/delete_status"
            android:layout_marginRight="@dimen/margin_small"
            android:contentDescription="@string/pnr_info_button"
            android:layout_gravity="center_vertical"
            android:hapticFeedbackEnabled="true"
            app:srcCompat="@drawable/info_button_drawable"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/delete_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/pnr_delete_button"
            app:srcCompat="@drawable/ic_discard"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
